First try to add the tree-chart.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<nav>
+  <a routerLink="/dnd-chart" routerLinkActive="active">Drag and Drop Chart</a>
+  <a routerLink="/tree" routerLinkActive="active">Tree Chart</a>
+</nav>
 <router-outlet></router-outlet>
