--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,17 @@
   width: 100%;
   height: 100%;
 }
+
+nav {
+  display: flex;
+  flex-direction: column;
+}
+
+nav > a {
+  border: 1px solid grey;
+  width: fit-content;
+  margin: 1em 0 0 1em;
+  font-size: large;
+  font-weight: bold;
+  color: blue;
+}
