adds updating sources.

--- a/src/app/d3-tree-chart/d3-tree-chart.component.html
+++ b/src/app/d3-tree-chart/d3-tree-chart.component.html
@@ -1,1 +1,4 @@
-<div id="tree-chart"></div>
+<div class="tree-chart-container">
+  <button (click)="appendNewSources()">new Sources</button>
+  <div id="tree-chart"></div>
+</div>
